--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -3,47 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Continental Breakfast</title>
-    <style>
-        /* Basic styling for the dropdown box */
-        .dropdown {
-            margin-bottom: 10px; /* Add space between dropdowns */
-        }
-
-        .dropdown-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 15px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .dropdown-header:hover {
-            background-color: #e0e0e0;
-        }
-
-        .dropdown-header::after {
-            content: '\25BC'; /* Downward arrow icon */
-            font-size: 12px;
-            transition: transform 0.3s ease;
-        }
-
-        .dropdown-header.active::after {
-            transform: rotate(180deg); /* Rotate arrow upward */
-        }
-
-        .dropdown-content {
-            display: none; /* Hidden by default */
-            padding: 10px 15px;
-            background-color: #fafafa;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-top: -1px; /* Overlap with the header border */
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
