put styling in style.css and removed comments

--- a/africa/africa.html
+++ b/africa/africa.html
@@ -7,72 +7,12 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <script src="africaQuiz.js" defer></script>
-    <style>
-        .map-container {
-            position: relative;
-            display: block;
-            text-align: center; /* This will center the image horizontally */
-            margin-top: 20px; /* Optional: Adds some space between the paragraph and the map */
-        }
-
-        .map-image {
-            max-width: 700px;  /* Adjust size as needed */
-            width: 100%;       /* Ensures the image is responsive up to the max-width */
-            max-height: 600px;
-            height: 100%;      /* Maintains aspect ratio */
-            margin: 0 auto;    /* Centers the image horizontally */
-            display: block;    /* Ensures it behaves like a block element for centering */
-        }
-
-        .region-button {
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.8);
-            border: 1px solid #ccc;
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transform: translate(-50%, -50%);
-        }
-
-        .region-button:hover {
-            background-color: rgba(255, 165, 0, 0.8);
-        }
-
-        .details {
-            display: none; /* Initially hidden */
-            position: fixed; /* Fix to viewport, not the document flow */
-            top: 50%; /* Move to the middle of the viewport */
-            left: 50%; /* Move to the middle of the viewport */
-            transform: translate(-50%, -50%); /* Adjust for the element's size */
-            z-index: 1000; /* Ensure it's above other elements */
-            border: 1px solid #ccc;
-            padding: 15px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add a shadow for better visibility */
-            max-width: 90%; /* Make it responsive */
-            width: 400px; /* Set a default width */
-            border-radius: 8px; /* Optional: Rounded corners */
-        }
-
-        .details img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .close-button {
-            background: #f00;
-            color: #fff;
-            padding: 5px;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
-        <a href="home.html">Home</a>
+        <a href="../home.html">Home</a>
         <a href="/northAmerica/northAmerica.html">North America</a>
         <a href="/southAmerica/southAmerica.html">South America</a>
         <a href="/oceania/oceania.html">Oceania</a>
@@ -88,11 +28,9 @@
             <p>Africa, the second-largest continent, is surrounded by the Mediterranean Sea, Red Sea, Indian Ocean, and Atlantic Ocean. The Equator divides it almost evenly. The continent is made up of eight major physical regions: the Sahara, Sahel, Ethiopian Highlands, savannas, Swahili Coast, rainforests, African Great Lakes, and Southern Africa, each hosting unique ecosystems.</p>
             <div class="map-container">
                 <img src="africaGeographyImages/africaMap.png" alt="Africa Map" class="map-image">
-                <!-- Example button for Sahara -->
                 <div class="region-button" style="top: 20%; left: 40%;" onclick="showDetails('sahara')">
                     Sahara
                 </div>
-                <!-- Add more buttons for other regions -->
                 <div class="region-button" style="top: 30%; left: 45%;" onclick="showDetails('sahel')">
                     Sahel
                 </div>
@@ -115,7 +53,6 @@
                     Southern Africa
                 </div>
             </div>
-            <!-- Details Sections -->
             <div id="sahara" class="details">
                 <h2>Sahara</h2>
                 <p>The Sahara, the world’s largest hot desert, spans 8.5 million square kilometers, covering 25% of Africa. Its features include ergs (sand dunes), regs (gravel plains), hamadas (rock plateaus), and oases that support human life. Flora and fauna have adapted to the desert's arid conditions, such as camels conserving water and deep-rooted plants surviving scarce rainfall.</p>
