--- a/northAmerica/northAmerica.html
+++ b/northAmerica/northAmerica.html
@@ -7,76 +7,12 @@
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>North America</title>
-    <style>
-        .map-container {
-            position: relative;
-            display: block;
-            text-align: center; /* This will center the image horizontally */
-            margin-top: 20px; /* Optional: Adds some space between the paragraph and the map */
-        }
-
-        .map-image {
-            max-width: 700px;  /* Adjust size as needed */
-            width: 100%;       /* Ensures the image is responsive up to the max-width */
-            max-height: 600px;
-            height: 100%;      /* Maintains aspect ratio */
-            margin: 0 auto;    /* Centers the image horizontally */
-            display: block;    /* Ensures it behaves like a block element for centering */
-        }
-
-        .region-button {
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.8);
-            border: 1px solid #ccc;
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transform: translate(-50%, -50%);
-        }
-
-        .region-button:hover {
-            background-color: rgba(255, 165, 0, 0.8);
-        }
-
-        .details {
-            display: none; /* Initially hidden */
-            position: fixed; /* Fix to viewport, not the document flow */
-            top: 50%; /* Move to the middle of the viewport */
-            left: 50%; /* Move to the middle of the viewport */
-            transform: translate(-50%, -50%); /* Adjust for the element's size */
-            z-index: 1000; /* Ensure it's above other elements */
-            border: 1px solid #ccc;
-            padding: 15px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add a shadow for better visibility */
-            max-width: 90%; /* Make it responsive */
-            width: 400px; /* Set a default width */
-            border-radius: 8px; /* Optional: Rounded corners */
-            max-width: 90%; /* Make it responsive */
-            width: 400px; /* Set a default width */
-            max-height: 80%; /* Limit the height to 80% of the viewport */
-            overflow-y: auto; /* Enable scrolling for overflow content */
-        }
-
-        .details img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .close-button {
-            background: #f00;
-            color: #fff;
-            padding: 5px;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="northAmerica.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="home.html">Home</a>
+        <a href="../home.html">Home</a>
         <a href="/northAmerica/northAmerica.html">North America</a>
         <a href="/southAmerica/southAmerica.html">South America</a>
         <a href="/oceania/oceania.html">Oceania</a>
@@ -92,7 +28,6 @@
             <p>North America, the third-largest continent, spans from the Aleutian Islands in the northwest to the Isthmus of Panama in the south. It includes Greenland in the northeast and the islands of the Caribbean Sea and western North Atlantic. Its diverse physical geography comprises five major regions: the mountainous west, the Great Plains, the Canadian Shield, the varied eastern region, and the Caribbean. These regions contain nearly all the world’s biomes, from deserts and grasslands to tundras and coral reefs.</p>
             <div class="map-container">
                 <img src="northAmericaGeographyImages/northAmericaMap.png" alt="Antarctica Map" class="map-image">
-                <!-- Buttons -->
                 <div class="region-button" style="top: 65%; left: 45%;" onclick="showDetails('westernRegion')">
                     Western Region
                 </div>
@@ -112,7 +47,6 @@
                     Natural Wonders
                 </div>
             </div>
-            <!-- Details Sections -->
             <div id="westernRegion" class="details">
                 <h2>Western Region</h2>
                 <p>The western region features young mountain ranges, such as the Rockies, which stretch from British Columbia to New Mexico, and the Sierra Madre system extending from the southwestern U.S. into Central America. This area is part of the larger Cordilleras, a network of mountain ranges running from Canada to Panama. Volcanic activity in this region has created fertile soils but also poses hazards like eruptions and earthquakes.</p>
