Styled and complete quizzes with questions

--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -244,9 +244,11 @@
                     <button type="submit">Submit</button>
                 </div>
             </form>
-        </div> 
+        </div>
+        
     </div>
 
     <script src="southAmerica.js"></script>
+    <script src="../home.js"></script>
 </body>
 </html>
