Rebased onto quiz

--- a/europe/europe.html
+++ b/europe/europe.html
@@ -12,20 +12,22 @@
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
     <div class="content">
         <h1>Europe</h1>
         <section class="geography">
             <h2>Geography</h2>
-            <p>Europe, the second-smallest continent, extends from Iceland in the west to the Ural Mountains in Russia in the east and from Norway’s Svalbard archipelago in the north to Greece and Malta in the south. Often described as a "peninsula of peninsulas," Europe is bordered by the Arctic Ocean to the north, the Atlantic Ocean to the west, and the Mediterranean, Black, and Caspian Seas to the south. The continent can be divided into four major physical regions: the Western Uplands, North European Plain, Central Uplands, and Alpine Mountains.</p>
+            <p>Europe, the second-smallest continent, extends from Iceland in the west to the Ural Mountains in Russia in the east and from Norway's Svalbard archipelago in the north to Greece and Malta in the south. Often described as a "peninsula of peninsulas," Europe is bordered by the Arctic Ocean to the north, the Atlantic Ocean to the west, and the Mediterranean, Black, and Caspian Seas to the south. The continent can be divided into four major physical regions: the Western Uplands, North European Plain, Central Uplands, and Alpine Mountains.</p>
             <img src="europeGeographyImages/europeMap.png" alt="Asia Map" class="map-image">
             <div class="region-button" style="top: 50%; left: 50%;" onclick="showDetails('uplands')">
                 Western Uplands
